[package]
name = "pallet-encointer-ceremonies"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-std"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-balances"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-support"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-system"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dev-dependencies.node-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "node-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.externalities]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-externalities"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.test-client]
package = "substrate-test-runtime-client"
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[features]
default = ["std"]
std = [
	"balances/std",
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"serde",
	"sr-primitives/std",
	"support/std",
	"system/std",
]
