[package]
name = "pallet-encointer-scheduler"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-std"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-support"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "palette-system"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.sp-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-timestamp"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-timestamp"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.node-primitives]
git = "https://github.com/paritytech/substrate"
package = "node-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.keystore]
git = "https://github.com/paritytech/substrate"
package = "substrate-keystore"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.inherents]
git = "https://github.com/paritytech/substrate"
package = "substrate-inherents"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies]
tempdir = "0.3.7"

[dev-dependencies.app-crypto]
git = "https://github.com/paritytech/substrate"
package = "substrate-application-crypto"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.externalities]
git = "https://github.com/paritytech/substrate"
package = "substrate-externalities"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dev-dependencies.test-client]
package = "substrate-test-runtime-client"
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"serde",
	"sr-primitives/std",
	"support/std",
	"system/std",
]
